<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.android.drerkvhz.MainActivity"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/image1"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:scaleType="centerCrop"
            android:src="@drawable/durer1" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/image1"
            android:scaleType="centerCrop"
            android:src="@drawable/durer1" />


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image1"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="sans-serif"
            android:text="@string/name"
            android:textColor="@color/data"
            android:textSize="@dimen/text_size1" />

        <TextView
            android:id="@+id/address1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="sans-serif"
            android:text="@string/address1"
            android:textColor="@color/data"
            android:textSize="@dimen/text_size2" />

        <TextView
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address1"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="sans-serif"
            android:text="@string/open"
            android:textColor="@color/data"
            android:textSize="@dimen/text_size2" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/open"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:drawableLeft="@drawable/ic_phone_black_18dp"
            android:fontFamily="sans-serif"
            android:text="@string/phone"
            android:textColor="@color/data"
            android:textSize="@dimen/text_size2" />


        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_http_black_18dp"
            android:drawableStart="@drawable/ic_http_black_18dp"
            android:fontFamily="sans-serif"
            android:text="@string/website"
            android:textColor="@color/data"
            android:textSize="@dimen/text_size2" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/website"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/margin_top"
            android:autoLink="email"
            android:drawableLeft="@drawable/ic_email_black_18dp"
            android:fontFamily="sans-serif"
            android:text="@string/email"
            android:textColor="@color/data"
            android:textSize="@dimen/text_size2" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            android:fontFamily="sans-serif"
            android:text="@string/description"
            android:textColor="@color/data"
            android:textSize="@dimen/text_size3" />

    </RelativeLayout>
</ScrollView>